--- a/index.html
+++ b/index.html
@@ -3,17 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello WebAR</title>
-    <script src="https://cdn.zappar.io/zappar-aframe/2.0.0/zappar-aframe.min.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <title>Hello GitHub Pages</title>
 </head>
 <body>
-    <a-scene zappar-instant>
-        <!-- فعال‌سازی دوربین WebAR -->
-        <a-entity zappar-camera></a-entity>
-        
-        <!-- نمایش یک مکعب در فضای AR -->
-        <a-box position="0 0 -2" rotation="0 45 0" color="blue"></a-box>
-    </a-scene>
+    <h1>Hello, GitHub Pages! 🎉</h1>
+    <p>If you see this page, GitHub Pages is working correctly.</p>
 </body>
 </html>
