--- a/index.html
+++ b/index.html
@@ -3,102 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebAR Ring on Finger</title>
-    
-    <!-- کتابخانه‌های WebAR و A-Frame -->
-    <script src="https://cdn.zappar.io/zappar-aframe/2.0.0/zappar-aframe.min.js"></script>
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-
-    <!-- Mediapipe Hand Tracking -->
+    <title>Hand Tracking Test</title>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils"></script>
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/camera_utils"></script>
+    <style>
+        body { text-align: center; font-family: Arial, sans-serif; }
+        video, canvas { position: absolute; left: 50%; transform: translateX(-50%); }
+        canvas { z-index: 1; }
+    </style>
+</head>
+<body>
+    <h1>Hand Tracking Test ✋</h1>
+    <p>Move your hand in front of the camera!</p>
+
+    <!-- ویدیو برای ورودی دوربین -->
+    <video id="videoInput" autoplay playsinline></video>
+    <!-- نمایش نتایج پردازش روی این Canvas -->
+    <canvas id="outputCanvas"></canvas>
 
     <script>
-        let handLandmarks = null;
+        const videoElement = document.getElementById('videoInput');
+        const canvasElement = document.getElementById('outputCanvas');
+        const canvasCtx = canvasElement.getContext('2d');
 
-        // تنظیم Mediapipe برای شناسایی دست
+        // راه‌اندازی Mediapipe Hands
         const hands = new Hands({
             locateFile: (file) => `https://cdn.jsdelivr.net/npm/@mediapipe/hands/${file}`
         });
 
         hands.setOptions({
-            maxNumHands: 1,  // فقط یک دست را شناسایی کن
+            maxNumHands: 1,
             modelComplexity: 1,
             minDetectionConfidence: 0.7,
             minTrackingConfidence: 0.7
         });
 
         hands.onResults((results) => {
-            if (results.multiHandLandmarks.length > 0) {
-                handLandmarks = results.multiHandLandmarks[0]; // فقط دست اول
+            canvasCtx.clearRect(0, 0, canvasElement.width, canvasElement.height);
+            canvasCtx.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
+
+            if (results.multiHandLandmarks) {
+                for (const landmarks of results.multiHandLandmarks) {
+                    drawConnectors(canvasCtx, landmarks, HAND_CONNECTIONS, { color: '#00FF00', lineWidth: 2 });
+                    drawLandmarks(canvasCtx, landmarks, { color: '#FF0000', radius: 4 });
+                }
             }
         });
 
-        // گرفتن تصویر دوربین و ارسال به Mediapipe
+        // دریافت استریم دوربین و ارسال به Mediapipe
         async function startHandTracking() {
-            const video = document.createElement("video");
-            video.setAttribute("autoplay", "");
-            video.setAttribute("playsinline", "");
+            const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+            videoElement.srcObject = stream;
 
-            // گرفتن استریم دوربین
-            navigator.mediaDevices.getUserMedia({ video: true }).then((stream) => {
-                video.srcObject = stream;
-                video.play();
-                const camera = new Camera(video, {
-                    onFrame: async () => {
-                        await hands.send({ image: video });
-                    },
-                    width: 640,
-                    height: 480
-                });
-                camera.start();
+            const camera = new Camera(videoElement, {
+                onFrame: async () => {
+                    await hands.send({ image: videoElement });
+                },
+                width: 640,
+                height: 480
             });
+            camera.start();
         }
 
-        // تابع برای به‌روزرسانی موقعیت حلقه
-        function updateRingPosition() {
-            if (handLandmarks) {
-                // مختصات انگشت حلقه (landmark شماره 16 در Mediapipe)
-                let ringFinger = handLandmarks[16];
-
-                // تبدیل مختصات به موقعیت A-Frame
-                let x = (ringFinger.x - 0.5) * 2; // نرمال‌سازی موقعیت
-                let y = (-ringFinger.y + 0.5) * 2;
-                let z = -ringFinger.z * 2;
-
-                // تنظیم موقعیت حلقه در A-Frame
-                let ring = document.getElementById("ring");
-                ring.setAttribute("position", `${x} ${y} ${z}`);
-            }
-
-            requestAnimationFrame(updateRingPosition);
-        }
-
-        window.onload = () => {
-            startHandTracking();
-            updateRingPosition();
+        // تنظیم اندازه Canvas با اندازه ویدیو
+        videoElement.onloadedmetadata = () => {
+            canvasElement.width = videoElement.videoWidth;
+            canvasElement.height = videoElement.videoHeight;
         };
+
+        startHandTracking();
     </script>
-</head>
-<body>
-    <a-scene zappar-instant>
-        <!-- فعال‌سازی دوربین WebAR -->
-        <a-entity zappar-camera></a-entity>
-
-        <!-- نورپردازی -->
-        <a-light type="directional" position="2 4 3" intensity="1.5" color="#ffffff"></a-light>
-        <a-light type="ambient" intensity="0.7" color="#cccccc"></a-light>
-
-        <!-- مدل حلقه که روی انگشت قرار می‌گیرد -->
-        <a-entity 
-            id="ring"
-            gltf-model="https://modelviewer.dev/shared-assets/models/DiamondRing.glb"
-            scale="0.05 0.05 0.05"
-            rotation="0 180 0"
-        ></a-entity>
-
-        <!-- پس‌زمینه -->
-        <a-sky color="#ECECEC"></a-sky>
-    </a-scene>
 </body>
 </html>
