--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ring on Finger - No Landmarks</title>
+    <title>Ring on Finger - Updated Version 💍</title>  <!-- بروزرسانی عنوان -->
     
     <!-- Mediapipe -->
     <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands"></script>
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>Ring on Finger 💍</h1>
+    <h1>Ring Tracking - Updated 💍</h1>  <!-- بروزرسانی عنوان داخل صفحه -->
     <p>Move your hand in front of the camera!</p>
 
     <!-- ویدیو برای ورودی دوربین -->
