--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Ring Display 💍</title>
-    
+    <title>Ring DisplayFixed 💍</title>
+
     <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
@@ -17,14 +17,19 @@
 
     <!-- صحنه سه‌بعدی A-Frame -->
     <a-scene embedded>
-        <a-camera position="0 0 5"></a-camera>
+        <!-- نورپردازی برای نمایش مدل -->
+        <a-light type="directional" position="1 1 1" intensity="1"></a-light>
+        <a-light type="ambient" intensity="0.5"></a-light>
+
+        <!-- دوربین -->
+        <a-camera position="0 1.5 5"></a-camera>
 
         <!-- نمایش مدل حلقه -->
         <a-entity 
-            gltf-model="https://modelviewer.dev/shared-assets/models/DiamondRing.glb"
-            scale="0.1 0.1 0.1"
-            position="0 0 -3"
-            rotation="0 90 0">
+            gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"
+            scale="1 1 1"
+            position="0 1 -3"
+            rotation="0 180 0">
         </a-entity>
     </a-scene>
 
