--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Camera Test 📷</title>
+    <title>Camera + Ring Model 💍</title>
+
+    <!-- A-Frame -->
+    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
 
     <style>
         body { text-align: center; font-family: Arial, sans-serif; background: black; color: white; }
@@ -11,11 +14,29 @@
     </style>
 </head>
 <body>
-    <h1>Camera is Open 📷</h1>
-    <p>If you see the camera feed, it's working correctly.</p>
+    <h1>Camera + 3D Ring 💍</h1>
+    <p>If you see the camera feed and the ring, it's working!</p>
 
     <!-- نمایش ویدیوی دوربین -->
     <video id="videoElement" autoplay playsinline></video>
+
+    <!-- صحنه سه‌بعدی A-Frame -->
+    <a-scene embedded>
+        <!-- نورپردازی -->
+        <a-light type="directional" position="1 1 1" intensity="1"></a-light>
+        <a-light type="ambient" intensity="0.5"></a-light>
+
+        <!-- دوربین -->
+        <a-camera position="0 1.5 5"></a-camera>
+
+        <!-- مدل حلقه -->
+        <a-entity 
+            gltf-model="https://cdn.jsdelivr.net/gh/KhronosGroup/glTF-Sample-Models/2.0/DamagedHelmet/glTF/DamagedHelmet.gltf"
+            scale="1 1 1"
+            position="0 1 -3"
+            rotation="0 180 0">
+        </a-entity>
+    </a-scene>
 
     <script>
         async function startCamera() {
