--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Ring Test</title>
+    <title>3D Model Test 💍</title>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
 </head>
 <body>
-    <h1>3D Model Test</h1>
+    <h1>3D Ring Model Test 💍</h1>
+    <p>If you see the ring, the model is loading correctly.</p>
+
+    <!-- نمایش مدل سه‌بعدی -->
     <model-viewer 
         src="jewelery_ring_diamonds.glb"
-        alt="3D Ring"
+        alt="3D Model of a Ring"
         auto-rotate
         camera-controls
         style="width: 100%; height: 500px;">
