compressed model file

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
     <!-- نمایش مدل سه‌بعدی -->
     <model-viewer 
-        src="jewelery_ring_diamonds.glb"
-        alt="3D Model of a Ring"
-        auto-rotate
-        camera-controls>
+    src="jewelery_ring_diamonds_compressed.glb"
+    alt="3D Model of a Ring"
+    auto-rotate
+    camera-controls>
     </model-viewer>
+
 
     <script>
         async function startCamera() {
